Fix image paths

--- a/About.html
+++ b/About.html
@@ -31,7 +31,7 @@
         <p>When I'm not coding, I enjoy exploring new technologies, contributing to open-source projects, and staying updated with the latest industry trends. 
              I believe in continuous learning and am always looking for opportunities to expand my knowledge and skill set. 
              In my free time, you can find me reading about scientific developments, experimenting with new programming paradigms, or simply enjoying a good book.</p>
-            <img src="Media/dashboard.webp" alt="dashboard">
+            <img src="dashboard.webp" alt="dashboard">
         </section>
         
     </main>
