--- a/Contact.html
+++ b/Contact.html
@@ -39,7 +39,7 @@
             <p>Email: your.email@example.com</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">Your Profile</a></p>
             <p>GitHub: <a href="https://github.com/yourprofile">Your Profile</a></p>
-            <img src="Media/portrait.webp" alt="Your Photo">
+            <img src="portrait.webp" alt="Your Photo">
         </section>
         
     </main>
