--- a/Projects.html
+++ b/Projects.html
@@ -23,14 +23,14 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="project">
-                <img src="Media/taskmanagement.webp" alt="Project 1">
+                <img src="taskmanagement.webp" alt="Project 1">
                 <h3>Project 1: Task Management App</h3>
                 <p>This task management app is designed to help users stay organized and on top of their daily tasks. The app features a clean, user-friendly interface and offers functionalities such as task categorization, due date reminders, and progress tracking. Users can create, edit, and delete tasks, set priorities, and track their progress over time. Built using React for the front-end, Node.js for the back-end, and MongoDB for the database, this app ensures a seamless experience across all devices.</p>
                 <p>The development process involved extensive user research and feedback, which guided the design and functionality of the app. The goal was to create a tool that is not only functional but also intuitive and enjoyable to use. By leveraging modern web technologies, the app delivers a fast and responsive user experience.</p>
                
             </div>
             <div class="project">
-                <img src="Media/ecommerce.webp" alt="Project 2">
+                <img src="ecommerce.webp" alt="Project 2">
                 <h3>Project 2: E-commerce Platform</h3>
                 <p>This e-commerce platform provides a comprehensive solution for online retailers, offering features such as product listings, shopping cart, secure checkout, and order management. The platform is designed to be scalable and can handle high traffic, ensuring a smooth shopping experience for users. Developed with Django for the back-end and PostgreSQL for the database, the platform also includes a customizable front-end built with Bootstrap.</p>
                 <p>Throughout the development process, emphasis was placed on security and performance. The platform implements secure payment gateways, user authentication, and data encryption to protect user information. Additionally, performance optimization techniques were employed to ensure fast load times and a responsive user interface.</p>
