--- a/Skills.html
+++ b/Skills.html
@@ -25,19 +25,19 @@
             <p>Over the years, I have developed a diverse skill set that allows me to tackle a wide range of projects. My skills span various programming languages, frameworks, and tools, making me a versatile and adaptable developer.</p>
             <div class="skills-icons">
                 <div class="skill">
-                    <img src="Media/html5.webp" alt="HTML5">
+                    <img src="html5.webp" alt="HTML5">
                     <p>HTML5: Proficient in creating structured, semantic, and accessible web pages using the latest HTML standards.</p>
                 </div>
                 <div class="skill">
-                    <img src="Media/CSS.webp" alt="CSS">
+                    <img src="CSS.webp" alt="CSS">
                     <p>CSS: Skilled in designing visually appealing and responsive layouts with CSS, including the use of Flexbox and Grid.</p>
                 </div>
                 <div class="skill">
-                    <img src="Media/java.webp" alt="JavaScript">
+                    <img src="java.webp" alt="JavaScript">
                     <p>JavaScript: Experienced in writing clean, efficient, and maintainable JavaScript code for both front-end and back-end applications.</p>
                 </div>
                 <div class="skill">
-                    <img src="Media/git.webp" alt="Git">
+                    <img src="git.webp" alt="Git">
                     <p>Git: Experienced in version control with Git, including branching, merging, and collaborative workflows using GitHub.</p>
                 </div>
                
