--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
         <section id="welcome">
             <h2>Welcome to My Portfolio</h2>
             <p>Explore my projects, skills, and contact information.</p>
-            <img src="Media/dashboard.webp" alt="Ada Lovelace">
+            <img src="dashboard.webp" alt="Ada Lovelace">
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
             <div class="project">
-                <img src="Media/taskmanagement.webp" alt="Project 1">
+                <img src="taskmanagement.webp" alt="Project 1">
                 <h3>Project 1</h3>
                 <p>This task management app</p>
                 <p>Technologies: HTML, CSS, JavaScript</p>
             </div>
             <div class="project">
-                <img src="Media/ecommerce.webp" alt="Project 2">
+                <img src="ecommerce.webp" alt="Project 2">
                 <h3>Project 2</h3>
                 <p>E E-commerce</p>
                 <p>Technologies: HTML, CSS, JavaScript</p>
