Fix internal links and script path

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Arnaud Decube</h1>
         <nav>
             <ul>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="About.html">About Me</a></li>
+                <li><a href="Projects.html">Projects</a></li>
+                <li><a href="Skills.html">Skills</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
         <button id="scrollToTopBtn" title="Go to top">Top</button>
@@ -25,19 +25,19 @@
         <section id="welcome">
             <h2>Welcome to My Portfolio</h2>
             <p>Explore my projects, skills, and contact information.</p>
-            <img src="Media/dashboard.webp" alt="Ada Lovelace">
+            <img src="dashboard.webp" alt="Ada Lovelace">
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
             <div class="project">
-                <img src="Media/taskmanagement.webp" alt="Project 1">
+                <img src="taskmanagement.webp" alt="Project 1">
                 <h3>Project 1</h3>
                 <p>This task management app</p>
                 <p>Technologies: HTML, CSS, JavaScript</p>
             </div>
             <div class="project">
-                <img src="Media/ecommerce.webp" alt="Project 2">
+                <img src="ecommerce.webp" alt="Project 2">
                 <h3>Project 2</h3>
                 <p>E E-commerce</p>
                 <p>Technologies: HTML, CSS, JavaScript</p>
@@ -49,6 +49,6 @@
     <footer>
         <p>Made with ♥ by Arnaud</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 </body>
 </html>
