--- a/Contact.html
+++ b/Contact.html
@@ -11,10 +11,10 @@
         <h1>Arnaud Decube</h1>
         <nav>
             <ul>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="About.html">About Me</a></li>
+                <li><a href="Projects.html">Projects</a></li>
+                <li><a href="Skills.html">Skills</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -39,7 +39,7 @@
             <p>Email: your.email@example.com</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">Your Profile</a></p>
             <p>GitHub: <a href="https://github.com/yourprofile">Your Profile</a></p>
-            <img src="Media/portrait.webp" alt="Your Photo">
+            <img src="portrait.webp" alt="Your Photo">
         </section>
         
     </main>
